Backing up legacy learnings

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <!-- main -->
     <div class="half">
       <h2>bio</h2>
-      <p [text]="bioLengths[states.selectedLength].bio">medium bio</p>
+      <p [text]="bioLengths[states.selectedLength].bio">Im a passionate Software Engineer working at a leading UK tech team. I'm always looking for a new challenge and love to keep up to date with the latest web trends</p>
       <h2>social</h2>
       <p></p>
     </div>
