Backing up legacy learnings

--- a/index.html
+++ b/index.html
@@ -255,7 +255,9 @@
     </div>
     <div class="quarter">
       <h2>skills</h2>
-      <p></p>
+      <ul>
+        <li>Google AMP & Mobile performance specialist</li>
+      </ul>
     </div>
 
   </div>
